Only #include <clutter/clutter.h>
clutter 1.0 does not allow individual headers to be included so
instead all of the sources just include <clutter/clutter.h>.

--- a/clutter/rbcltactorbox.c.in
+++ b/clutter/rbcltactorbox.c.in
@@ -17,7 +17,7 @@
  * MA  02110-1301  USA
  */
 
-#include <clutter/clutter-actor.h>
+#include <clutter/clutter.h>
 
 /* MAKE_BOXED(ClutterActorBox x1:ClutterUnit y1:ClutterUnit x2:ClutterUnit y2:ClutterUnit) */
 
