--- a/clutter/rbcltevent.c.in
+++ b/clutter/rbcltevent.c.in
@@ -20,8 +20,7 @@
 #include <glib.h>
 #include <ruby.h>
 #include <rbgobject.h>
-#include <clutter/clutter-event.h>
-#include <clutter/clutter-enum-types.h>
+#include <clutter/clutter.h>
 
 #include "rbclutter.h"
 
