--- a/clutter/rbcltcolor.c.in
+++ b/clutter/rbcltcolor.c.in
@@ -22,12 +22,13 @@
 /* MAKE_BOXED(ClutterColor INIT:0xff red:guint8 green:guint8 blue:guint8 alpha:guint8) */
 
 static VALUE
-rbclt_color_parse (VALUE self, VALUE name)
+rbclt_color_from_string (VALUE self, VALUE name)
 {
   ClutterColor color;
 
-  if (!clutter_color_parse (StringValuePtr (name), &color))
-    rb_raise (rb_eArgError, "can't parse color name `%s'", StringValuePtr (name));
+  if (!clutter_color_from_string (&color, StringValuePtr (name)))
+    rb_raise (rb_eArgError, "can't parse color name `%s'",
+              StringValuePtr (name));
 
   return BOXED2RVAL (&color, CLUTTER_TYPE_COLOR);
 }
@@ -85,10 +86,13 @@ rbclt_color_from_hls (VALUE self, VALUE hue, VALUE luminance, VALUE saturation)
 static VALUE
 rbclt_color_to_hls (VALUE self)
 {
-  guint8 hue, luminance, saturation;
+  gfloat hue, luminance, saturation;
   clutter_color_to_hls ((ClutterColor *) RVAL2BOXED (self, CLUTTER_TYPE_COLOR),
                         &hue, &luminance, &saturation);
-  return rb_ary_new3 (3, INT2FIX (hue), INT2FIX (luminance), INT2FIX (saturation));
+  return rb_ary_new3 (3,
+                      rb_float_new (hue),
+                      rb_float_new (luminance),
+                      rb_float_new (saturation));
 }
 
 static VALUE
@@ -111,7 +115,7 @@ rbclt_color_shade (VALUE self, VALUE shade)
   ClutterColor *src = (ClutterColor *) RVAL2BOXED (self, CLUTTER_TYPE_COLOR);
   ClutterColor dest;
   dest.alpha = src->alpha;
-  clutter_color_shade (src, &dest, NUM2DBL (shade));
+  clutter_color_shade (src, NUM2DBL (shade), &dest);
   return BOXED2RVAL (&dest, CLUTTER_TYPE_COLOR);
 }
 
@@ -121,7 +125,7 @@ rbclt_color_shade_bang (VALUE self, VALUE shade)
   ClutterColor *src = (ClutterColor *) RVAL2BOXED (self, CLUTTER_TYPE_COLOR);
   ClutterColor dest;
   dest.alpha = src->alpha;
-  clutter_color_shade (src, &dest, NUM2DBL (shade));
+  clutter_color_shade (src, NUM2DBL (shade), &dest);
   *src = dest;
   return self;
 }
@@ -173,7 +177,7 @@ rbclt_color_init ()
 {
   VALUE klass = G_DEF_CLASS (CLUTTER_TYPE_COLOR, "Color", rbclt_c_clutter);
 
-  rb_define_singleton_method (klass, "parse", rbclt_color_parse, 1);
+  rb_define_singleton_method (klass, "from_string", rbclt_color_from_string, 1);
   rb_define_singleton_method (klass, "from_hls", rbclt_color_from_hls, 3);
   rb_define_singleton_method (klass, "from_pixel", rbclt_color_from_pixel, 1);
   /* METHOD_DEFINITIONS */
